# grok-bridge

.github/workflows/: desktop-windows.yml
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/scripts/: build-windows-x64.sh
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs  paths.rs  process.rs
docs/superpowers/plans/: 2026-07-13-grok-bridge.md  2026-07-14-desktop-app.md
docs/superpowers/specs/: 2026-07-13-grok-bridge-design.md  2026-07-14-desktop-app-design.md
grok-bridge/: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  go.mod
grok-bridge/cmd/login/: main.go
grok-bridge/cmd/server/: main.go
grok-bridge/internal/access/: keys.go  keys_test.go
grok-bridge/internal/account/: import.go  import_test.go  picker.go  picker_test.go  picker_weighted_test.go  store.go  store_test.go
grok-bridge/internal/adminui/: embed.go
grok-bridge/internal/api/: admin.go  admin_test.go  adminui_test.go  middleware.go  public.go  public_test.go  server.go
grok-bridge/internal/config/: config.go  config_test.go
grok-bridge/internal/db/: db.go  migrate.go  migrate_test.go
grok-bridge/internal/httpproxy/: proxy.go
grok-bridge/internal/logging/: store.go  store_test.go
grok-bridge/internal/models/: catalog.go  catalog_test.go
grok-bridge/internal/pipeline/: pipeline.go  pipeline_test.go  scrub.go  scrub_test.go
grok-bridge/packaging/: README-RELEASE.md
grok-bridge/scripts/: build-release.sh  smoke.sh
(+18 files in other folders)
