[package]
name = "grok-bridge-desktop"
version = "0.1.0"
description = "Grok Bridge desktop shell"
authors = ["sowlhet"]
edition = "2021"

[lib]
name = "grok_bridge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
dirs = "6"
open = "5"
